k8s/ondemand.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ondemand
  namespace: ondemand
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ondemand
  template:
    metadata:
      labels:
        app: ondemand
    spec:
      nodeName: nst-n6
      containers:
      - name: ondemand
        image: ghcr.io/devn913/ondemand:latest
        imagePullPolicy: Always
        securityContext:
          privileged: true
        volumeMounts:
        - name: sys-fs-cgroup
          mountPath: /sys/fs/cgroup
        - name: ondemand-data
          mountPath: /var/lib/ondemand-puppet
        resources:
          limits:
            nvidia.com/gpu: "1"
      volumes:
      - name: sys-fs-cgroup
        hostPath:
          path: /sys/fs/cgroup
          type: Directory
      - name: ondemand-data
        hostPath:
          path: /var/lib/ondemand-data
          type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: ondemand
  namespace: ondemand
spec:
  type: NodePort
  selector:
    app: ondemand
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30080
  - name: https
    port: 443
    targetPort: 443
    nodePort: 30443
